--- a/streamlit-forna/frontend/package.json
+++ b/streamlit-forna/frontend/package.json
@@ -14,7 +14,8 @@
     "react-dom": "^17.0.2",
     "reset.css": "^2.0.2",
     "streamlit-component-lib": "^1.4.0",
-    "fornac": "^1.1.8"
+    "fornac": "^1.1.8",
+    "d3": "~3.5.13"
   },
   "devDependencies": {
     "@types/react": "^17.0.2",
